@@ -1,3 +1,8 @@
+2018-11-14  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (write_daily_files): overwrite
+	existing files
+
 2018-08-08  Enrico Schumann  <es@enricoschumann.net>
 
 	* DESCRIPTION (Package): initial version
